Added functions to log and count parsing of statements and expressions
Currently prints all expressions and statements to stderr, then outputs
a total count of each token to stderr after program execution.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,8 @@ add_executable(picoc
         picoc.h
         platform.c
         platform.h
+        stats.c
+        stats.h
         table.c
         type.c
         variable.c)
